# driver-solution-cad

./: .cursorrules  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD.md  CHANGES_SUMMARY.md  CMakeLists.txt  CMakeLists_simple.txt  IMGUI_SETUP.md  INSTALL.md  INSTALL_DEPS.md  INSTALL_GUI.md  INSTALL_XTD.md  LICENSE  MAC_SETUP.md  QUICK_INSTALL.sh  QUICK_START.md  README.md  SETUP_BUILD.md  UI_FRAMEWORK.md  build_without_tests.sh  close - Copy.config  console_terminal  demo_2d_point  demo_3d_point  demo_main_window  demo_menu_console  run_menu.sh  simple_cs_demo  test_xtd.cmake
doc/: CHAT_HISTORY.md
doc/instructions/: 00_CONCEPT.md  00_SETUP_GITHUB.md  00_START_HERE.md  01_minimal_kernel.md
examples/: console_terminal.cpp  demo_2d_point.cpp  demo_3d_point.cpp  demo_cs.cpp  demo_main_menu.cpp  demo_main_window.cpp  demo_menu_console.cpp  demo_terminal.cpp  minimal_gui.cpp  simple_cs_demo.cpp  simple_gui.cpp  simple_gui_fixed.cpp  simple_gui_working.cpp
include/: 2D_point.h  3D_point.h  CS.h  ConstructionHistory.h  DataExchange.h  Document2D.h  MainWindow.h  Node.h  OpenGLRenderer.h  Solution.h  SolutionDocument.h  TerminalWindow.h  Value.h  XTD.h
include/Core/: DependencyGraph.h  Kernel.h  RegisterSolutions.h  Solution.h  SolutionFactory.h  Types.h
include/Solutions/: BooleanSolution.h  CircleSolution.h  ConstraintSolution.h  CoordinateSystemSolution.h  ExtrudeSolution.h  FilletSolution.h  LineSolution.h  PointSolution.h  RevolveSolution.h  SketchSolution.h
include/UI/: Application.h  Octree.h  RenderCache.h  Window.h  WindowConfig.h
properties/: assembly_info.cpp
src/: 2D_point.cpp  3D_point.cpp  CS.cpp  ConstructionHistory.cpp  DataExchange.cpp  Document2D.cpp  MainWindow.cpp  MainWindowWithMenu.cpp  Node.cpp  OpenGLRenderer.cpp  Solution.cpp  SolutionDocument.cpp  TerminalWindow.cpp  Value.cpp  XTD.cpp  main.cpp
src/Core/: DependencyGraph.cpp  Kernel.cpp  RegisterSolutions.cpp  Solution.cpp  SolutionFactory.cpp
src/Solutions/: BooleanSolution.cpp  CircleSolution.cpp  ConstraintSolution.cpp  CoordinateSystemSolution.cpp  ExtrudeSolution.cpp  FilletSolution.cpp  LineSolution.cpp  PointSolution.cpp  RevolveSolution.cpp  SketchSolution.cpp
src/UI/: Application.cpp  Application.h  Octree.cpp  RenderCache.cpp  Window.cpp  WindowConfig.cpp
tests/: test_BooleanSolution.cpp  test_CircleSolution.cpp  test_ConstraintSolution.cpp  test_CoordinateSystemSolution.cpp  test_DependencyGraph.cpp  test_ExtrudeSolution.cpp  test_FilletSolution.cpp  test_Kernel.cpp  test_Kernel_Integration.cpp  test_LineSolution.cpp  test_PointSolution.cpp  test_RevolveSolution.cpp  test_SketchSolution.cpp  test_Solution.cpp  test_SolutionFactory.cpp
